[package]
name = "type-forge"
version = "0.1.0"
edition = "2024"
authors = ["SirCesarium"]
description = "A fast CLI tool to transform JSON, YAML, TOML, and XML into type-safe code for Rust, TypeScript, and more."
license = "MIT"
repository = "https://github.com/SirCesarium/type-forge"
readme = "README.md"
keywords = [
  "codegen",
  "json-to-rust",
  "schema-generator",
  "serialization",
  "cli",
]
categories = [
  "command-line-utilities",
  "development-tools::code-generators",
  "parsing",
]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
java-properties = "2.0.0"
json_typegen_shared = "0.7.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1.0.6"
